# BIBgen

./: .gitignore  README.md  pyproject.toml  slcio_to_hdf5.py
.github/workflows/: ci.yml
examples/: README.md  convert_slcio_files.py  diffuse.py  make_training_data.py  noise_schedule.csv  plot_comparison.py  plot_encoding.py
examples/generation/: generate_demo.py  generate_like.py  run_generate_demo.sh  run_generate_like.sh  submit_generate_demo.sub  submit_generate_like.sub  write_test_sizes.py
examples/submit_example_scripts/: README.md  sample_job_test.py  submit_conv.sh
examples/submit_example_scripts/submit_utils/: check_torch.py  sandbox.sh
examples/submit_scripts/: conv_files.sub
examples/training/: run_train.sh  submit_train.sub  train.py
models/: autoencoder.py
scripts/: diffuse.py  make_training_data.py
scripts/submit_scripts/: gpu_jobs.sub
scripts/training/: train.py
src/: slcio_to_hdf5.py
src/BIBgen/: dataloader.py  generation.py  histogram_utils.py  losses.py  preprocessing.py  slcio_to_hdf5.py  training.py
src/BIBgen/analysis/: bibgen_histogram_analysis.py
src/BIBgen/loss_function/: bc_loss.py  gaussian_nll.py  total_loss.py
src/BIBgen/models/: __init__.py  autoencoder.py  diffusion.py
src/BIBgen/submit_scripts/: gpu_jobs.sub  submit.sh
src/BIBgen/submit_scripts/submit_utils/: check_modules.sh  check_python.sh
src/src/BIBgen/loss_function/: gaussian_nll.py  losses_init.py
tests/: test_bibgen.py  test_conversion.py  test_gaussian_nll_loss.py  test_histogram_analysis.py  test_models.py  test_preprocessing.py  test_training.py
