[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "BIBgen"
version = "0.1.0"
description = "Simulating Beam Induced Background for a Muon Collider with AI"
readme = "README.md"
authors = [
	{ name = "Rose Powers", email = "rp7916@princeton.edu" },
  	{ name = "Max Zhao", email = "max.zhao@princeton.edu" },
  	{ name = "Elettra Preosti", email = "ep1627@princeton.edu" },
]
requires-python = ">=3.10"

dependencies = [
	"numpy",
	"scipy",
	"sklearn",
	"matplotlib",
    "torch==2.7.1+cu118",
    "torchvision",
]

[dependency-groups]
test = [
	"pytest",
]
dev = [
	{include_group = "test"},
]

