[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "BIBgen"
version = "0.1.0"
description = "Simulating Beam Induced Background for a Muon Collider with AI"
readme = "README.md"
authors = [
	{ name = "Rose Powers", email = "rp7916@princeton.edu" },
  	{ name = "Max Zhao", email = "max.zhao@princeton.edu" },
  	{ name = "Elettra Preosti", email = "ep1627@princeton.edu" },
]
requires-python = ">=3.10"

dependencies = [
	"numpy",
	"scipy",
	"scikit-learn",
	"matplotlib",
    	"torch==2.9.0",
	"h5py",
	"argparse",
]

[dependency-groups]
test = [
	"pytest",
]
dev = [
	{include-group = "test"},
  "torchvision",
   "pyLCIO",
]

[tool.ruff.lint]
extend-select = [
  "B",           # flake8-bugbear
  "I",           # isort
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "EM",          # flake8-errmsg
  "ICN",         # flake8-import-conventions
  "ISC",         # flake8-implicit-str-concat
  "G",           # flake8-logging-format
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "PTH",         # flake8-use-pathlib
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "T20",         # flake8-print
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
  "EXE",         # flake8-executable
  "NPY",         # NumPy specific rules
  "PD",          # pandas-vet
]
ignore = [
  "PLR",    # Design related pylint codes
  "PT004",  # Use underscore for non-returning fixture (use usefixture instead)
]
flake8-unused-arguments.ignore-variadic-names = true
isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.per-file-ignores]
"tests/**" = ["T20"]

[tool.mypy]
files = "src"
python_version = "3.10"
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true

# You can disable imports or control per-module/file settings here
[[tool.mypy.overrides]]
module = ["numpy.*", "matplotlib.*", "sklearn.*", "torch.*"]
ignore_missing_imports = true
